Set max note title length to 32 chars to avoid overflow in NoteView. - Also explicitly set overflow handling in NoteView.css

--- a/lambdanotes/src/components/NoteView.css
+++ b/lambdanotes/src/components/NoteView.css
@@ -3,6 +3,9 @@
   flex-flow: column nowrap;
   width: 100%;
   margin: 20px;
+  white-space: wrap;
+  overflow: hidden;
+  text-overflow: clip;
 }
 
 .NoteView-Links {
